--- a/Sass/_aboutusStyle.scss
+++ b/Sass/_aboutusStyle.scss
@@ -53,7 +53,7 @@
   text-align: center;
   margin-top: 20px;
   @include small{
-    margin-top: 0x;
+    margin-top: 0px;
   }
   @include large {
     width: 33.3%;
