--- a/Sass/allStyles.scss
+++ b/Sass/allStyles.scss
@@ -1,9 +1,13 @@
-
+//Mixins
 @import "mixins";
 
+
+//Page sections
 @import "headerStyle";
 @import "aboutusStyle";
 @import "perfectTamplateStyle";
 @import "quotationStyle";
 @import "wordStyle";
 @import "pricingStyle";
+@import "downloadStyle";
+@import "contactStyle";
