--- a/Views/Index.html
+++ b/Views/Index.html
@@ -200,9 +200,9 @@
             <p>Mollis Sit Nullan</p>
             <p>Ultricies Purus Amet</p>
             <p>Cras Inceptos</p>
-            <button>SELECT PLAN</button>
+            <button class="pricing-tabs__btn">SELECT PLAN</button>
         </div>
-        <div class="pricing-tabs__element">
+        <div class="pricing-tabs__element ">
             <h3>PLUS</h3>
             <h2>$399</h2>
             <p>/month</p>
@@ -210,7 +210,7 @@
             <p>Mollis Sit Nullan</p>
             <p>Ultricies Purus Amet</p>
             <p>Cras Inceptos</p>
-            <button>SELECT PLAN</button>
+            <button class="pricing-tabs__btn pricing-tabs__btn_actvie">SELECT PLAN</button>
         </div>
         <div class="pricing-tabs__element">
             <h3>PREMIUM</h3>
@@ -220,8 +220,45 @@
             <p>Mollis Sit Nullan</p>
             <p>Ultricies Purus Amet</p>
             <p>Cras Inceptos</p>
-            <button>SELECT PLAN</button>
+            <button class="pricing-tabs__btn">SELECT PLAN</button>
         </div>
+    </div>
+
+    <div class="pricing-plans">
+        <h2 class="pricing-plans-heading">Included with all Plans</h2>
+        <hr class="section-header-underline"/>
+        <ul class="pricing-plans-list">
+            <li><p><img alt="" src="../Content/approved.png"/> Maecenas faucibus mollis interdum</p></li>
+            <li><p><img alt="" src="../Content/approved.png"/> Cras justo odio, dapibus ac facilisis</p></li>
+            <li><p><img alt="" src="../Content/approved.png"/>Fringilla Mattis</p></li>
+
+            <li><p><img alt="" src="../Content/approved.png"/>Vestibulum id ligula porta felis euismod</p></li>
+            <li><p><img alt="" src="../Content/approved.png"/>Duis mollis, est non commodo luctus</p></li>
+            <li><p><img alt="" src="../Content/approved.png"/>Integer posuere</p></li>
+
+            <li><p><img alt="" src="../Content/approved.png"/>Nulla vitae elit libero, a pharetra augue</p></li>
+            <li><p><img alt="" src="../Content/approved.png"/>Curabitur blandit tempus porttitor</p></li>
+            <li><p><img alt="" src="../Content/approved.png"/>Nullam quis risus eget urna mollis</p></li>
+        </ul>
+    </div>
+
+    <div class="pricing-help">
+        <img alt="" src="../Content/lifebuoy.png"/>
+        <h2>Need Help?</h2>
+        <hr class="section-header-underline"/>
+        <p class="pricing-help__content">Contact our Customer Support that is always ready to help you with any possible
+            questions, problems or information.</p>
+        <p class="pricing-email">support@wapik.com</p>
+    </div>
+
+</section>
+
+<section id="download">
+    <div class="download-container">
+        <div class="download-content">
+            <h1>Do You Like Wapik? Download it Now</h1>
+            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p></div>
+        <button>DOWNLOAD NOW! - FREE FOREVER</button>
     </div>
 </section>
 
