--- a/Views/Index.html
+++ b/Views/Index.html
@@ -262,7 +262,40 @@
     </div>
 </section>
 
-<section id="contact"></section>
+<section id="contact">
+    <div class="row contact-container">
+        <div class="col-xs-12 xol-sm-6 col-md-3">
+            <h1>WAPIK</h1>
+            <span>@:</span><h2>hi@wapik.com</h2>
+            <p>p: +62 202 555 0117</p>
+            <p>a: 610 Overlook Circle Suite 323
+                Kalamazoo, MI 49009</p>
+        </div>
+
+        <div class="col-xs-12 xol-sm-6 col-md-3">
+            <h2>Company</h2>
+            <ul>
+                <li><a href="#home">HOME</a></li>
+                <li><a href="#aboutus">About us</a></li>
+                <li><a href="#pricing">Pricing</a></li>
+                <li><a href="#contact">Contact us</a></li>
+            </ul>
+        </div>
+
+        <div class="col-xs-12 xol-sm-6 col-md-3">
+            <h2>Others</h2>
+            <ul>
+                <li><a href="#">Help & Support</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Support</a></li>
+            </ul>
+        </div>
+        <div class="col-xs-12 xol-sm-6 col-md-3">
+            <h2>Newsletter</h2>
+        </div>
+    </div>
+</section>
 <footer></footer>
 
 <link href="../js/jquery-2.2.2.min.js">
