--- a/Views/Index.html
+++ b/Views/Index.html
@@ -264,25 +264,25 @@
 
 <section id="contact">
     <div class="row contact-container">
-        <div class="col-xs-12 xol-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-3 contact-data">
             <h1>WAPIK</h1>
-            <span>@:</span><h2>hi@wapik.com</h2>
+            <p> @: <b> hi@wapik.com </b></p>
             <p>p: +62 202 555 0117</p>
             <p>a: 610 Overlook Circle Suite 323
                 Kalamazoo, MI 49009</p>
         </div>
 
-        <div class="col-xs-12 xol-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-3 contact-list">
             <h2>Company</h2>
             <ul>
-                <li><a href="#home">HOME</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#aboutus">About us</a></li>
                 <li><a href="#pricing">Pricing</a></li>
                 <li><a href="#contact">Contact us</a></li>
             </ul>
         </div>
 
-        <div class="col-xs-12 xol-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-3 contact-list">
             <h2>Others</h2>
             <ul>
                 <li><a href="#">Help & Support</a></li>
@@ -291,12 +291,21 @@
                 <li><a href="#">Support</a></li>
             </ul>
         </div>
-        <div class="col-xs-12 xol-sm-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-3 contact-newsletter">
             <h2>Newsletter</h2>
+            <p>Subscribe to our newsletter and get all
+                the cool news</p>
+            <input type="input" placeholder="Enter Email" />
+            <img alt="" src="../Content/plane.png"/>
         </div>
     </div>
 </section>
-<footer></footer>
+
+<footer>
+    <hr/>
+    <p>All rights reserved 2015.</p>
+    <img alt="Social links" src="../Content/sociallinks.png"/>
+</footer>
 
 <link href="../js/jquery-2.2.2.min.js">
 <link href="../js/bootstrap.min.js">
