--- a/Views/Index.html
+++ b/Views/Index.html
@@ -88,11 +88,13 @@
         </div>
     </div>
 
+
     <div class="row aboutus-others">
         <div class="col-sm-6 col-xs-12 aboutus-others__element">
             <img alt="" src="../Content/1st.png"/>
             <span>Cross Browser Compatibility</span>
-            <p>Donec ullamcorper nulla non metus auctor fringilla. Donec id elit non mi porta gravida at eget metus.</p>
+            <p>Donec ullamcorper nulla non metus auctor fringilla. Donec id elit non mi porta gravida at eget
+                metus.</p>
         </div>
         <div class="col-sm-6 col-xs-12 aboutus-others__element">
             <img alt="" src="../Content/2nd.png"/>
@@ -109,9 +111,11 @@
         <div class="col-sm-6 col-xs-12 aboutus-others__element">
             <img alt="" src="../Content/4th.png"/>
             <span>Free Forever and Ever</span>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec id elit non mi porta gravida at eget
+            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec id elit non mi porta gravida at
+                eget
                 metus.</p>
         </div>
+
     </div>
 </section>
 
@@ -264,7 +268,7 @@
 
 <section id="contact">
     <div class="row contact-container">
-        <div class="col-xs-12 col-sm-6 col-md-3 contact-data">
+        <div class="col-xs-12 col-sm-12 col-md-3 contact-data">
             <h1>WAPIK</h1>
             <p> @: <b> hi@wapik.com </b></p>
             <p>p: +62 202 555 0117</p>
@@ -272,7 +276,7 @@
                 Kalamazoo, MI 49009</p>
         </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-3 contact-list">
+        <div class="col-xs-6 col-md-3 contact-list">
             <h2>Company</h2>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -282,7 +286,7 @@
             </ul>
         </div>
 
-        <div class="col-xs-12 col-sm-6 col-md-3 contact-list">
+        <div class="col-xs-6 col-md-3 contact-list">
             <h2>Others</h2>
             <ul>
                 <li><a href="#">Help & Support</a></li>
@@ -291,12 +295,14 @@
                 <li><a href="#">Support</a></li>
             </ul>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3 contact-newsletter">
+        <div class="col-xs-12 col-sm-12 col-md-3 contact-newsletter">
             <h2>Newsletter</h2>
             <p>Subscribe to our newsletter and get all
                 the cool news</p>
-            <input type="input" placeholder="Enter Email" />
-            <img alt="" src="../Content/plane.png"/>
+            <div class="contact-newsletter-input">
+                <input type="text" placeholder="Enter Email"/>
+                <button><img src="../Content/plane.png"/></button>
+            </div>
         </div>
     </div>
 </section>
@@ -304,7 +310,33 @@
 <footer>
     <hr/>
     <p>All rights reserved 2015.</p>
-    <img alt="Social links" src="../Content/sociallinks.png"/>
+    <ul class="footer-list">
+        <li>
+            <a href="https://twitter.com/">
+                <div class="footer-twitter"></div>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.facebook.com/">
+                <div class="footer-facebook"></div>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.instagram.com/">
+                <div class="footer-instagram"></div>
+            </a>
+        </li>
+        <li>
+            <a href="https://dribbble.com/">
+                <div class="footer-dribble"></div>
+            </a>
+        </li>
+        <li>
+            <a href="https://github.com/">
+                <div class="footer-github"></div>
+            </a>
+        </li>
+    </ul>
 </footer>
 
 <link href="../js/jquery-2.2.2.min.js">
