--- a/Sass/_aboutusStyle.scss
+++ b/Sass/_aboutusStyle.scss
@@ -81,14 +81,19 @@
 
 .aboutus-others__element {
   padding-top: 50px;
+  span {
+    font-size: 16px;
+    font-family: "Roboto";
+    color: rgb(15, 95, 92);
+    line-height: 1.25;
+    text-align: left;
 
-}
-
-.aboutus-others__element span {
-  font-size: 16px;
-  font-family: "Roboto";
-  color: rgb(15, 95, 92);
-  line-height: 1.25;
-  text-align: left;
-
+  }
+  p{
+    max-width: 400px;
+    margin: 0 auto;
+    @include medium{
+      max-width: 100%;
+    }
+  }
 }
