--- a/Sass/_downloadStyle.scss
+++ b/Sass/_downloadStyle.scss
@@ -33,10 +33,13 @@
   }
   .download-content {
     position: absolute;
-    top: 40%;
+    top: 35%;
     left: inherit;
     transform: translateY(-50%);
     @include small{
+      top: 40%;
+    }
+    @include medium{
       top: 50%;
     }
     h1 {
@@ -44,12 +47,12 @@
       font-family: "Roboto";
       color: rgb(15, 95, 92);
 
-      @include small{
+      @include medium{
         font-size: 30px;
       }
     }
     p {
-      font-size: 12px;
+      font-size: 13px;
       font-family: "Roboto";
       color: rgb(131, 167, 165);
       line-height: 1.467;
@@ -64,23 +67,32 @@
     border: 0;
     border-radius: 2px;
     padding: 12px 25px;
-    font-size: 12px;
+    font-size: 10px;
     font-family: "Montserrat";
     text-transform: uppercase;
     text-align: center;
     position: absolute;
     left: 10px;
-    bottom: 0;
+    bottom: 15%;
 
-    @include medium {
-      left: 20px;
+    @include small{
+      bottom: 10%;
+
     }
-    @include large {
+    @include medium {
       left:auto;
-      right: 80px;
+      right: 20px;
+      padding: 8px 15px;
       top: 50%;
       bottom: auto;
       transform: translateY(-50%);
+      width:150px;
+    }
+    @include large {
+      right: 80px;
+      padding: 12px 25px;
+      font-size: 12px;
+      width: auto;
     }
     @include xlarge {
       right: 150px;
