--- a/css/allStyles.css
+++ b/css/allStyles.css
@@ -201,13 +201,18 @@ header {
 
 .aboutus-others__element {
   padding-top: 50px; }
-
-.aboutus-others__element span {
-  font-size: 16px;
-  font-family: "Roboto";
-  color: #0f5f5c;
-  line-height: 1.25;
-  text-align: left; }
+  .aboutus-others__element span {
+    font-size: 16px;
+    font-family: "Roboto";
+    color: #0f5f5c;
+    line-height: 1.25;
+    text-align: left; }
+  .aboutus-others__element p {
+    max-width: 400px;
+    margin: 0 auto; }
+    @media screen and (min-width: 768px) {
+      .aboutus-others__element p {
+        max-width: 100%; } }
 
 #perfectTemplate {
   background-color: #eef1ec; }
@@ -642,21 +647,24 @@ header {
       margin: 0 210px; } }
   .download-container .download-content {
     position: absolute;
-    top: 40%;
+    top: 35%;
     left: inherit;
     transform: translateY(-50%); }
     @media screen and (min-width: 481px) {
+      .download-container .download-content {
+        top: 40%; } }
+    @media screen and (min-width: 768px) {
       .download-container .download-content {
         top: 50%; } }
     .download-container .download-content h1 {
       font-size: 26px;
       font-family: "Roboto";
       color: #0f5f5c; }
-      @media screen and (min-width: 481px) {
+      @media screen and (min-width: 768px) {
         .download-container .download-content h1 {
           font-size: 30px; } }
     .download-container .download-content p {
-      font-size: 12px;
+      font-size: 13px;
       font-family: "Roboto";
       color: #83a7a5;
       line-height: 1.467; }
@@ -669,23 +677,31 @@ header {
     border: 0;
     border-radius: 2px;
     padding: 12px 25px;
-    font-size: 12px;
+    font-size: 10px;
     font-family: "Montserrat";
     text-transform: uppercase;
     text-align: center;
     position: absolute;
     left: 10px;
-    bottom: 0; }
+    bottom: 15%; }
+    @media screen and (min-width: 481px) {
+      .download-container button {
+        bottom: 10%; } }
     @media screen and (min-width: 768px) {
       .download-container button {
-        left: 20px; } }
-    @media screen and (min-width: 992px) {
-      .download-container button {
         left: auto;
-        right: 80px;
+        right: 20px;
+        padding: 8px 15px;
         top: 50%;
         bottom: auto;
-        transform: translateY(-50%); } }
+        transform: translateY(-50%);
+        width: 150px; } }
+    @media screen and (min-width: 992px) {
+      .download-container button {
+        right: 80px;
+        padding: 12px 25px;
+        font-size: 12px;
+        width: auto; } }
     @media screen and (min-width: 1200px) {
       .download-container button {
         right: 150px; } }
@@ -709,12 +725,14 @@ header {
       margin: 0 210px; } }
 
 .contact-container {
-  padding: 10px 0; }
-  @media screen and (min-width: 768px) {
+  padding: 10px 0;
+  text-align: center; }
+  @media screen and (min-width: 1200px) {
     .contact-container {
+      text-align: left;
       padding: 100px 0; } }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .contact-data {
     padding-right: 50px; } }
 
@@ -723,8 +741,7 @@ header {
   font-family: 'Montserrat', sans-serif;
   color: #0f5f5c;
   font-weight: bold;
-  text-transform: uppercase;
-  text-align: left; }
+  text-transform: uppercase; }
 
 .contact-data span, .contact-data p {
   font-size: 13px;
@@ -749,19 +766,42 @@ header {
 .contact-list a {
   color: #83a7a5; }
 
-.contact-newsletter p {
-  font-size: 13px;
-  font-family: "Roboto";
-  color: #83a7a5; }
+.contact-newsletter {
+  max-width: 300px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%); }
+  @media screen and (min-width: 992px) {
+    .contact-newsletter {
+      transform: translateX(0%);
+      position: static;
+      margin: 0;
+      padding: 0; } }
+  .contact-newsletter p {
+    font-size: 13px;
+    font-family: "Roboto";
+    color: #83a7a5; }
 
-.contact-newsletter input {
-  background-color: #eef1ec;
-  border: 0px;
-  padding: 10px 15px; }
+.contact-newsletter-input {
+  position: relative; }
+  .contact-newsletter-input input {
+    background-color: #eef1ec;
+    border: 0px;
+    padding: 10px 15px;
+    width: 100%;
+    height: 36px; }
+  .contact-newsletter-input button {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    background-color: transparent;
+    border: 0; }
 
 footer {
   margin: 0 10px;
-  position: relative; }
+  position: relative;
+  min-height: 50px; }
   @media screen and (min-width: 768px) {
     footer {
       margin: 0 20px; } }
@@ -779,8 +819,53 @@ footer {
     font-family: "Roboto";
     color: #83a7a5;
     line-height: 1.5;
-    font-weight: 700; }
-  footer img {
-    position: absolute;
-    right: 0%;
-    top: 40%; }
+    font-weight: 700;
+    text-align: center; }
+    @media screen and (min-width: 481px) {
+      footer p {
+        text-align: left;
+        position: absolute;
+        left: 0;
+        top: 60%;
+        transform: translateY(-50%); } }
+  footer .footer-list {
+    list-style: none;
+    text-align: center;
+    margin: 0;
+    padding: 0; }
+    @media screen and (min-width: 481px) {
+      footer .footer-list {
+        position: absolute;
+        right: 0;
+        top: 60%;
+        transform: translateY(-50%); } }
+    footer .footer-list li {
+      display: inline-block; }
+      @media screen and (min-width: 481px) {
+        footer .footer-list li {
+          margin-left: 10px; } }
+
+.footer-twitter {
+  height: 30px;
+  width: 30px;
+  background: url("../Content/sociallinks.png") 0 0; }
+
+.footer-facebook {
+  background: url("../Content/sociallinks.png") -40px 0;
+  height: 30px;
+  width: 30px; }
+
+.footer-instagram {
+  background: url("../Content/sociallinks.png") -80px 0;
+  height: 30px;
+  width: 30px; }
+
+.footer-dribble {
+  background: url("../Content/sociallinks.png") -120px 0;
+  height: 30px;
+  width: 30px; }
+
+.footer-github {
+  background: url("../Content/sociallinks.png") -160px 0;
+  height: 30px;
+  width: 30px; }
