--- a/Sass/_headerStyle.scss
+++ b/Sass/_headerStyle.scss
@@ -7,23 +7,39 @@ body {
 
 nav {
   padding: 0;
-  line-height: 85px;
-  margin: 0 20px;
+  line-height: 50px;
+  padding: 0 5px;
+  @include small{
+    padding: 0 20px;
+  }
+  @include medium{
+    line-height: 85px;
+
+  }
   @include xlarge {
-    margin: 0 210px;
+    padding: 0 210px;
   }
 }
 
+.navBackground{
+  background-color: #3c7778;
+  line-height: 50px;
+  padding-top: 5px;
+}
+
 .nav-submenu {
+  padding-top: 0px;
+  margin-top: 0;
   float: left;
   a {
     color: white;
-    font-size: 1.5em;
-    padding-right: 5px;
+    font-size: 1.2em;
 
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     @include medium {
+      font-size: 1.5em;
+
       padding-right: 10px;
     }
     @include large {
@@ -34,7 +50,9 @@ nav {
     border-left: grey 1px solid;
     padding-left: 5px;
     color: white;
+    font-size: 0.8em;
     @include medium {
+      font-size: 1em;
       padding-left: 10px;
     }
     @include large {
@@ -51,9 +69,9 @@ nav {
   list-style: none;
   text-transform: uppercase;
   li {
-    display: inline-block;
     margin-right: 5px;
     @include medium {
+      display: inline-block;
       margin-right: 10px;
     }
     @include large {
@@ -146,5 +164,46 @@ header {
   }
   .header-content__btn:hover {
     cursor: pointer;
+  }
+}
+
+.navbar-toggle {
+  .icon-bar {
+    transition: 300ms ease-in-out;
+    background-color:#bec8c8;
+    position: relative;
+    width: 24px;
+    height: 3px;
+  }
+
+  .icon-bar:nth-child(1) {
+    opacity: 0;
+  }
+  .icon-bar:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    top: 0px;
+  }
+
+  .icon-bar:nth-child(3) {
+    opacity: 1;
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    top: -7px;
+  }
+
+  &.collapsed {
+    .icon-bar {
+      -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+      top: 0;
+      opacity: 1;
+    }
   }
 }
