--- a/Sass/_aboutusStyle.scss
+++ b/Sass/_aboutusStyle.scss
@@ -19,7 +19,9 @@
 .section-header {
   text-align: center;
 }
-
+#aboutus .section-header{
+  opacity: 0;
+}
 .section-header-title {
   padding-top: 80px;
   font-size: 32px;
