--- a/Sass/_contactStyle.scss
+++ b/Sass/_contactStyle.scss
@@ -15,7 +15,7 @@
 }
 
 .contact-container {
-  padding: 10px 0;
+  padding: 100px 0 50px 0;
   text-align: center;
   @include xlarge {
     text-align: left;
