--- a/Views/Index.html
+++ b/Views/Index.html
@@ -9,24 +9,24 @@
 </head>
 <body>
 
-<nav class="navbar navbar-fixed-top">
+<nav id="navigation" class="navbar navbar-fixed-top">
     <div class="nav-submenu">
         <a href="#">WAPIK</a>
         <span> <img alt="" src="../Content/phone.png"/>+62 202 555 0117</span>
     </div>
 
     <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+        <button id="hamburger" type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                 data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+
         </button>
     </div>
 
     <div class="nav-menu collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav-menu-list">
+        <ul id="navigationMenu" class="nav-menu-list">
             <li>
                 <a href="#home">Home</a>
             </li>
@@ -339,7 +339,8 @@
     </ul>
 </footer>
 
-<link href="../js/jquery-2.2.2.min.js">
-<link href="../js/bootstrap.min.js">
+<script src="../js/jquery-2.2.2.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/index.js"></script>
 </body>
 </html>
