--- a/Views/Index.html
+++ b/Views/Index.html
@@ -11,7 +11,7 @@
 
 <nav id="navigation" class="navbar navbar-fixed-top">
     <div class="nav-submenu">
-        <a href="#">WAPIK</a>
+        <a href="#home">WAPIK</a>
         <span> <img alt="" src="../Content/phone.png"/>+62 202 555 0117</span>
     </div>
 
@@ -47,15 +47,14 @@
 </nav>
 
 
-<header id="home">
+<section id="home">
     <div class="header-content">
         <h1 class="header-content__title">Welcome to wapik</h1>
         <p class="header-content__subtitle">Wapik is multipurpose template, with modern and smart design. Wapik is
-            perfect
-            template for you!</p>
+            perfect template for you!</p>
         <button class="header-content__btn">LEARN MORE</button>
     </div>
-</header>
+</section>
 
 
 <section id="aboutus">
@@ -170,6 +169,7 @@
             <img class="img-responsive" alt="" src="../Content/face.png"/>
         </div>
     </div>
+
 </section>
 
 <section id="world">
@@ -312,27 +312,27 @@
     <p>All rights reserved 2015.</p>
     <ul class="footer-list">
         <li>
-            <a href="https://twitter.com/">
+            <a target="_blank" href="https://twitter.com/">
                 <div class="footer-twitter"></div>
             </a>
         </li>
         <li>
-            <a href="https://www.facebook.com/">
+            <a target="_blank" href="https://www.facebook.com/">
                 <div class="footer-facebook"></div>
             </a>
         </li>
         <li>
-            <a href="https://www.instagram.com/">
+            <a target="_blank" href="https://www.instagram.com/">
                 <div class="footer-instagram"></div>
             </a>
         </li>
         <li>
-            <a href="https://dribbble.com/">
+            <a target="_blank" href="https://dribbble.com/">
                 <div class="footer-dribble"></div>
             </a>
         </li>
         <li>
-            <a href="https://github.com/">
+            <a target="_blank" href="https://github.com/">
                 <div class="footer-github"></div>
             </a>
         </li>
