--- a/Sass/_contactStyle.scss
+++ b/Sass/_contactStyle.scss
@@ -73,8 +73,6 @@
   left: 50%;
   transform: translateX(-50%);
 
-
-
   @include large {
     transform: translateX(0%);
     position: static;
@@ -111,4 +109,26 @@
     border: 0;
   }
 
+}
+
+.contact-container {
+  opacity: 0;
+  -moz-transition: all 1000ms linear;
+  -webkit-transition: all 1000ms linear;
+  -o-transition: all 1000ms linear;
+  transition: all 1000ms linear;
+  -moz-transform: translate3d(0px, -100px, 0px);
+  -webkit-transform: translate3d(0px, -100px, 0px);
+  -o-transform: translate(0px, -100px);
+  -ms-transform: translate(0px, -100px);
+  transform: translate3d(0px, -100px, 0px);
+}
+
+.contact-container.in-view {
+  opacity: 1;
+  -moz-transform: translate3d(0px, 0px, 0px);
+  -webkit-transform: translate3d(0px, 0px, 0px);
+  -o-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  transform: translate3d(0px, 0px, 0px);
 }
