--- a/Sass/_headerStyle.scss
+++ b/Sass/_headerStyle.scss
@@ -25,6 +25,9 @@ nav {
   background-color: #3c7778;
   line-height: 50px;
   padding-top: 5px;
+  -webkit-box-shadow: 0 4px 5px #295a5b;
+  -moz-box-shadow: 0 4px 5px #295a5b;
+  box-shadow: 0 4px 5px #295a5b;
 }
 
 .nav-submenu {
@@ -102,7 +105,7 @@ nav {
   text-align: center;
 }
 
-header {
+#home {
   margin: 0;
   padding: 0;
   background: url("../Content/Header.png") no-repeat center fixed;
@@ -113,7 +116,7 @@ header {
   width: 100%;
   height: 660px;
   position: relative;
-  z-index: -1;
+  //z-index: -1;
 }
 
 .header-content {
@@ -153,18 +156,16 @@ header {
     }
   }
 
-  .header-content__btn {
-    margin-top: 20px;
-    font-family: "Montserrat";
-    background-color: #6fb048;
-    border: 0px;
-    width: 185px;
-    height: 50px;
-    border-radius: 2px;
-  }
-  .header-content__btn:hover {
-    cursor: pointer;
-  }
+}
+
+.header-content__btn {
+  margin-top: 20px;
+  font-family: "Montserrat";
+  background-color: #6fb048;
+  border: 0px;
+  width: 185px;
+  height: 50px;
+  border-radius: 2px;
 }
 
 .navbar-toggle {
