--- a/css/allStyles.css
+++ b/css/allStyles.css
@@ -22,7 +22,10 @@ nav {
 .navBackground {
   background-color: #3c7778;
   line-height: 50px;
-  padding-top: 5px; }
+  padding-top: 5px;
+  -webkit-box-shadow: 0 4px 5px #295a5b;
+  -moz-box-shadow: 0 4px 5px #295a5b;
+  box-shadow: 0 4px 5px #295a5b; }
 
 .nav-submenu {
   padding-top: 0px;
@@ -88,7 +91,7 @@ nav {
   text-transform: uppercase;
   text-align: center; }
 
-header {
+#home {
   margin: 0;
   padding: 0;
   background: url("../Content/Header.png") no-repeat center fixed;
@@ -98,8 +101,7 @@ header {
   background-size: cover;
   width: 100%;
   height: 660px;
-  position: relative;
-  z-index: -1; }
+  position: relative; }
 
 .header-content {
   position: absolute;
@@ -133,16 +135,15 @@ header {
       .header-content .header-content__subtitle {
         width: 500px;
         height: 40px; } }
-  .header-content .header-content__btn {
-    margin-top: 20px;
-    font-family: "Montserrat";
-    background-color: #6fb048;
-    border: 0px;
-    width: 185px;
-    height: 50px;
-    border-radius: 2px; }
-  .header-content .header-content__btn:hover {
-    cursor: pointer; }
+
+.header-content__btn {
+  margin-top: 20px;
+  font-family: "Montserrat";
+  background-color: #6fb048;
+  border: 0px;
+  width: 185px;
+  height: 50px;
+  border-radius: 2px; }
 
 .navbar-toggle .icon-bar {
   transition: 300ms ease-in-out;
@@ -423,6 +424,26 @@ header {
         width: 100%;
         height: 100%; } }
 
+.quotation-container {
+  opacity: 0;
+  -moz-transition: all 1000ms linear;
+  -webkit-transition: all 1000ms linear;
+  -o-transition: all 1000ms linear;
+  transition: all 1000ms linear;
+  -moz-transform: translate3d(-200px, 0px, 0px);
+  -webkit-transform: translate3d(-200px, 0px, 0px);
+  -o-transform: translate(-200px, 0px);
+  -ms-transform: translate(-200px, 0px);
+  transform: translate3d(-200px, 0px, 0px); }
+
+.quotation-container.in-view {
+  opacity: 1;
+  -moz-transform: translate3d(0px, 0px, 0px);
+  -webkit-transform: translate3d(0px, 0px, 0px);
+  -o-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  transform: translate3d(0px, 0px, 0px); }
+
 #world {
   background-color: #eef1ec;
   height: auto; }
@@ -495,6 +516,26 @@ header {
   @media screen and (min-width: 481px) {
     .world-container {
       padding: 50px 0; } }
+
+.world-container {
+  opacity: 0;
+  -moz-transition: all 1000ms linear;
+  -webkit-transition: all 1000ms linear;
+  -o-transition: all 1000ms linear;
+  transition: all 1000ms linear;
+  -moz-transform: translate3d(200px, 0px, 0px);
+  -webkit-transform: translate3d(200px, 0px, 0px);
+  -o-transform: translate(200px, 0px);
+  -ms-transform: translate(200px, 0px);
+  transform: translate3d(200px, 0px, 0px); }
+
+.world-container.in-view {
+  opacity: 1;
+  -moz-transform: translate3d(0px, 0px, 0px);
+  -webkit-transform: translate3d(0px, 0px, 0px);
+  -o-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  transform: translate3d(0px, 0px, 0px); }
 
 #pricing {
   margin: 0 10px; }
@@ -848,6 +889,26 @@ header {
     transform: translateY(-50%);
     background-color: transparent;
     border: 0; }
+
+.contact-container {
+  opacity: 0;
+  -moz-transition: all 1000ms linear;
+  -webkit-transition: all 1000ms linear;
+  -o-transition: all 1000ms linear;
+  transition: all 1000ms linear;
+  -moz-transform: translate3d(0px, -100px, 0px);
+  -webkit-transform: translate3d(0px, -100px, 0px);
+  -o-transform: translate(0px, -100px);
+  -ms-transform: translate(0px, -100px);
+  transform: translate3d(0px, -100px, 0px); }
+
+.contact-container.in-view {
+  opacity: 1;
+  -moz-transform: translate3d(0px, 0px, 0px);
+  -webkit-transform: translate3d(0px, 0px, 0px);
+  -o-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  transform: translate3d(0px, 0px, 0px); }
 
 footer {
   margin: 0 10px;
